--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
         <link rel="icon" href="{{ asset(img/favicon.ico) }}">
         <title>{% block title %}BDE Ynov Lyon:{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="apple-touch-icon" sizes="57x57" href="{{ assets(img/apple-icon-57x57.png') }}">
+        <link rel="apple-touch-icon" sizes="57x57" href="{{ assets(img/apple-icon-57x57.png) }}">
         <link rel="apple-touch-icon" sizes="60x60" href="{{ asset(img/apple-icon-60x60.png) }}">
         <link rel="apple-touch-icon" sizes="72x72" href="{{ asset(img/apple-icon-72x72.png) }}">
         <link rel="apple-touch-icon" sizes="76x76" href="{{ asset(img/apple-icon-76x76.png) }}">
