--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="icon" href="{{ asset(img/favicon.ico) }}">
+        <link rel="icon" href="{{ asset('img/favicon.ico') }}">
         <title>{% block title %}BDE Ynov Lyon:{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="apple-touch-icon" sizes="57x57" href="{{ asset('img/apple-icon-57x57.png') }}">
@@ -22,7 +22,7 @@
         <link rel="icon" type="image/png" sizes="96x96" href="{{ asset('img/favicon-96x96.png') }}">
         <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('img/favicon-16x16.png') }}">
         <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="{{ asset(img/ms-icon-144x144.png) }}">
+        <meta name="msapplication-TileImage" content="{{ asset('img/ms-icon-144x144.png') }}">
         <meta name="theme-color" content="#ffffff">
         <link rel="stylesheet" href="{{ asset('/build/app.css') }}">
         {% block stylesheets %}{% endblock %}
