--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,7 +3,6 @@ body {
     padding-top: 5rem;
 }
 
-.starter-template {
-    padding: 3rem 1.5rem;
-    text-align: center;
+.flex{
+    display: flex;
 }
