--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -4,13 +4,16 @@
 
 {% block body %}
 
-    <main role="main" class="container">
-
-        <div class="starter-template">
-            <h1>Bootstrap starter template</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-        </div>
-
-    </main>
+<div class="container-fluid flex">
+    <div class="sidebar left">
+        <h1>Sidebar left</h1>
+    </div>
+    <div class="container">
+        <h1>content middle</h1>
+    </div>
+    <div class="sidebar right">
+        <h1>Sidebar Right</h1>
+    </div>
+</div>
 
 {% endblock %}
