--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -4,14 +4,14 @@
 
 {% block body %}
 
-<div class="container-fluid flex">
-    <div class="sidebar left">
+<div class="d-flex justify-content-between">
+    <div class="flex d-md" style="background-color: red;">
         <h1>Sidebar left</h1>
     </div>
-    <div class="container">
+    <div class="container" style="background-color: #0000F0">
         <h1>content middle</h1>
     </div>
-    <div class="sidebar right">
+    <div class="flex d-sm" style="background-color: #1C440C">
         <h1>Sidebar Right</h1>
     </div>
 </div>
