js bootstrap + registration controller

--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -1,8 +1,7 @@
 {% extends 'base.html.twig' %}
 
-
-
 {% block body %}
+{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
 <div class="d-flex justify-content-between pl-5 pr-5">
     <div class="shadow-sm p-3 mb-5 bg-white rounded w-25 p-3 m-2">
@@ -16,4 +15,18 @@
     </div>
 </div>
 
+{% else %}
+
+    <h1>Inscription</h1>
+
+    {{ form_start(form) }}
+    {# {{ form_widget(form) }} équivaut à : #}
+    {{ form_row(form.email) }}
+    {{ form_row(form.password) }}
+    <hr />
+    {{ form_row(form.firstname) }}
+    {{ form_row(form.lastname) }}
+    {{ form_end(form) }}
+
+{% endif %}
 {% endblock %}
