--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,10 +5,25 @@ body {
 
 
 .profile {
-    width: 20%;
+    width: 12.5%;
 }
 
 a{
     color:#b1524c;
 
+}
+
+.btn-success{
+    background-color: #103546 ;
+    border: #103546;
+}
+
+.btn-success:hover{
+    background-color: #103546 ;
+}
+
+.logoCenter{
+    position: fixed;
+    top: 10px;
+    left: 47%;
 }
