--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse " id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{{ path('homepage') }}">
                         <i class="fas fa-home"></i>
                         Accueil
                         <span class="sr-only">(current)</span>
