fin du menu + debut form tweet

--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -44,7 +44,9 @@
                 <img src="{{ asset('img/favicon-32x32.png') }}"/>
             </div>
 
-            <button class="btn btn-danger tweet">Tweeter</button>
+            <button type="button" class="btn btn-danger tweet" data-toggle="modal" data-target="#exampleModal">Tweeter</button>
+
+
 
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Recherche..." aria-label="Search">
