--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -1,15 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %}Profil{% endblock %}
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; float: left; margin-left: 50px;}
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+    <div class="user-info">
+        <img src
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmXKtdARJyEgvHJjDSCvY-E73aQemd1QBE8TRgdqbFlhj81md3Mw" alt="..." class="rounded-circle profile" >
+        <p>{{ app.user.username }}</p>
+        <p>{{ app.user.firstname }} {{ app.user.lastname }}</p
+        <p>{{ app.user.promotion }} {{ app.user.training }}</p>
+    </div>
+    {% endif %}
 
 </div>
 {% endblock %}
