--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -4,19 +4,25 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; float: left; margin-left: 50px;}
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; float: left; margin-left: 50px; margin-top: 80px;}
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
 <div class="example-wrapper">
     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
     <div class="user-info">
-        <img src
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmXKtdARJyEgvHJjDSCvY-E73aQemd1QBE8TRgdqbFlhj81md3Mw" alt="..." class="rounded-circle profile" >
         <p>{{ app.user.username }}</p>
         <p>{{ app.user.firstname }} {{ app.user.lastname }}</p
         <p>{{ app.user.promotion }} {{ app.user.training }}</p>
     </div>
+
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
     {% endif %}
 
 </div>
