--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -39,13 +39,14 @@
                     <img src="{{ tweet.user.avatar }}" alt="{{ tweet.user.username }}" class="rounded-circle avatar-tweet" >
                 </div>
                 <div class="col-md-11">
-                    {{ tweet.user.username }}
-                    {{ tweet.datetime|date("m/d/Y") }}
+                    <span class="font-weight-bold"> {{ tweet.user.firstname }} {{ tweet.user.lastname }}</span> <span class="small" style="color: grey;">@{{ tweet.user.username }} {{ tweet.datetime|date("m/d/Y") }}</span>
+                        <br />
+                    {{ tweet.content }}
+                    <br />
+                    <div class="d-flex">
+                        <div class="w-10"><a href=""><i class="fas fa-retweet"></i></a></div> <div class="w-10"><a href=""><i class="far fa-heart"></i></a></div>
+                    </div>
                 </div>
-            </div>
-            <hr class="d-flex justify-content-between" style="width: 95%">
-            <div class="pl-3 pr-3">
-                {{ tweet.content }}
             </div>
         </div>
         <hr>
