--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,8 +8,13 @@ body {
     width: 25px;
 }
 
-a:hover{
+a:hover, a.a-tweet:hover{
     color: #b1524c !important;
+}
+
+a.a-tweet{
+    color: black !important;
+    text-decoration: none !important;
 }
 
 nav a{
@@ -57,4 +62,8 @@ nav a{
 
 .w-10{
     width: 10%;
+}
+
+.hm-140{
+    max-height: 140px;
 }
