--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -54,30 +54,10 @@
     <div class="shadow-sm p-3 mb-5 bg-white rounded w-25 p-3 m-2">
         <h4>Suggestions</h4>
     </div>
+    {{ render(controller(
+    'App\\Controller\\AddTweetController::show'
+    )) }}
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Écrire un nouveau tweet</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        {{ form_start(form) }}
-                        {{ form_row(form.content) }}
-                        {{ form_end(form) }}
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 {% else %}
