--- a/templates/tweet.html.twig
+++ b/templates/tweet.html.twig
@@ -1,10 +1,14 @@
 <div>
     <div class="d-flex pl-3 pr-3 pt-3">
         <div class="col-md-1 mr-3">
-            <a href="" ><img src="{{ tweet.user.avatar }}" alt="{{ tweet.user.username }}" class="rounded-circle avatar-tweet" ></a>
+            <a href="{{ path('user_details', {
+                        'userUsername': tweet.user.username
+                    }) }}" ><img src="{{ tweet.user.avatar }}" alt="{{ tweet.user.username }}" class="rounded-circle avatar-tweet" ></a>
         </div>
         <div class="col-md-11">
-            <a href="" class="a-tweet"><span class="font-weight-bold"> {{ tweet.user.firstname }} {{ tweet.user.lastname }}</span></a> <span class="small" style="color: grey;">@{{ tweet.user.username }} {{ tweet.datetime|date("m/d/Y") }}</span>
+            <a href="{{ path('user_details', {
+                        'userUsername': tweet.user.username
+                    }) }}" class="a-tweet"><span class="font-weight-bold"> {{ tweet.user.firstname }} {{ tweet.user.lastname }}</span></a> <span class="small" style="color: grey;">@{{ tweet.user.username }} {{ tweet.datetime|date("m/d/Y") }}</span>
             <br />
             {{ tweet.content }}
             <br />
