--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ user.username }}{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
 <div class="d-flex justify-content-between pl-5 pr-5">
@@ -21,6 +21,9 @@
                 </li>
             </ul>
         </div>
+        {{ render(controller(
+            'App\\Controller\\AddTweetController::show'
+        )) }}
         <div class="card-body">
             <h5 class="card-title">Special title treatment</h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
