--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="d-flex justify-content-between pl-5 pr-5">
     <div class="shadow-sm p-3 mb-5 bg-white rounded w-25 m-2 hm-140">
-        Bonjour
+        <h4>{{ user.username }}</h4>
     </div>
     <div class="card text-center">
         <div class="card-header">
