--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -19,7 +19,7 @@
         <div class="d-flex mt-2">
             <div class="col-sm-3">
                 <span class="">Tweets</span>
-                <span class="font-weight-bold" style="color: #b1524c;"> 0</span>
+                <span class="font-weight-bold" style="color: #b1524c;"> {{ app.user.tweetNb }}</span>
             </div>
             <div class="col-sm-5">
                 <span class="">Abonnements</span>
