--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -11,7 +11,7 @@
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Active</a>
+                    <a class="nav-link active" href="#">Tweet</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
