--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -11,18 +11,21 @@
     <div class="card w-50">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Tweet <br />
-                        {{ user.tweetNb }}</a>
+                <li class="nav-item text-center">
+                    <a class="nav-link active" href="#"><span style="font-size: small">Tweet</span> <br />
+                        <span style="color: #b1524c; font-weight: bold">{{ user.tweetNb }}</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Abonnement</a>
+                <li class="nav-item text-center">
+                    <a class="nav-link" href="#"><span style="font-size: small">Abonnement</span> <br />
+                        <span style="color: #b1524c; font-weight: bold">{{ user.tweetNb }}</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Abonnés</a>
+                <li class="nav-item text-center">
+                    <a class="nav-link" href="#"><span style="font-size: small">Abonnés</span> <br />
+                        <span style="color: #b1524c; font-weight: bold">{{ user.tweetNb }}</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">J'aime</a>
+                <li class="nav-item text-center">
+                    <a class="nav-link" href="#"><span style="font-size: small">J'aime</span> <br />
+                        <span style="color: #b1524c; font-weight: bold">{{ user.tweetNb }}</span></a>
                 </li>
             </ul>
         </div>
