--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,19 +9,22 @@
     {% endif %}
 
     <form action="{{ path('login') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+        <div class="form-group">
+            <label for="username">Email:</label>
+            <input type="text" id="username" class="form-control" name="_username" value="{{ last_username }}" />
+            <br />
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" name="_password" />
 
-        {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-        #}
-
-        <button type="submit">login</button>
+            {#
+            If you want to control the URL the user
+            is redirected to on success (more details below)
+            <input type="hidden" name="_target_path" value="/account" />
+            #}
+            <br />
+            <button type="submit" class="btn btn-primary">login</button>
+        </div>
     </form>
 </div>
 {% endblock %}
