--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -27,7 +27,7 @@ nav a{
     border-color: #b1524c !important;
 }
 
-.btn-primary {
+.btn-primary, .btn-secondary {
     color: #fff;
     background-color: #103546 !important;
     border-color: #103546 !important;
@@ -66,4 +66,14 @@ nav a{
 
 .hm-140{
     max-height: 140px;
+}
+
+.avatar-profile{
+    display: block;
+    height: 100px;
+    margin-top: -50px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 3px solid white;
+    border-radius: 50px !important;
 }
