If is membre BDE

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -68,6 +68,10 @@ nav a{
     max-height: 140px;
 }
 
+.hm-200{
+    max-height: 200px;
+}
+
 .avatar-profile{
     display: block;
     height: 100px;
