--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -6,10 +6,12 @@
             <li class="mb-4"><i class="fas fa-comment"></i> Rejoignez la conversation.</li>
         </ul>
     </div>
-    <div class="m-auto w-50 p-5">
+    <div class="m-auto w-50 p-5 bg-white d-flex flex-column justify-content-center" style="height: 100vh;">
         <p>Découvrez ce qui se passe dans ynov en temps réel<br />
             Evènement du campus, activités et soirée, retrouver l'essentiel du bde autour du twitter du bde.</p>
-        <a href="{{ path('login') }}"><button type="button" class="btn btn-primary">Se connecter</button></a>
-        <a href="{{ path('registration') }}"><button type="button" class="btn btn-danger">S'inscrire</button></a>
+        <div>
+            <a href="{{ path('login') }}"><button type="button" class="btn btn-primary">Se connecter</button></a>
+            <a href="{{ path('registration') }}"><button type="button" class="btn btn-danger">S'inscrire</button></a>
+        </div>
     </div>
 </div>
