--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -37,7 +37,7 @@
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link" href="#"><small>J'aime</small> <br />
-                        <span style="color: #b1524c; font-weight: bold">0</span></a>
+                        <span style="color: #b1524c; font-weight: bold">{{ user.likeNb }}</span></a>
                 </li>
             </ul>
         </div>
